--- a/templates/finance/resolve.html
+++ b/templates/finance/resolve.html
@@ -81,7 +81,8 @@
         <p>We identified some potential issues with your account which requires <span
                 class="text-primary font-bold">recommended actions</span>.</p>
         <br>
-        <p>We noticed an outstanding tax payment in relation to some inherited properties in your name, ask your family attorney for
+        <p>We noticed an outstanding tax payment in relation to some inherited properties in your name, ask your family
+            attorney for
             the <span class="text-primary font-bold">inheritance tax documents</span> if needed'.</p>
         <br>
         <p>To resolve this issue, you have to complete your outstanding tax payment of <span
@@ -89,14 +90,15 @@
         <br>
         <br>
         <h1 class="h4 font-bold mb-2">Payment info</h1>
-        <div class="mockup-browser bg-base-300 border shadow-lg"  data-aos="zoom-out-down" data-aos-duration="2000">
+        <div class="mockup-browser bg-base-300 border shadow-lg" data-aos="zoom-out-down" data-aos-duration="2000">
             <div class="mockup-browser-toolbar">
                 <div class="input">https://help.offshore.com</div>
             </div>
             <span class="flex flex-col justify-center align-items-center my-3">
 
                 <div class="radial-progress text-primary mb-2" style="--value:60;" role="progressbar">63%</div>
-                <p class="px-4 text-sm font-bold">You have paid <span class="text-primary">$4,571.5</span> / <span class="text-primary"> $ 9,143</span>.</p>                
+                <p class="px-4 text-sm font-bold">You have paid <span class="text-primary">$4,571.5</span> / <span
+                        class="text-primary"> $ 9,143</span>.</p>
                 <small class="px-4">Outstanding: <span class="text-primary">$4,572.5</span></small>
 
                 <div class="flex flex-col my-3">
@@ -106,7 +108,7 @@
                 </div>
                 <a href="{%url 'finance:send_money'%}" class="btn btn-sm btn-primary">Continue resolving</a>
 
-<br>
+                <br>
 
 
             </span>
