--- a/templates/userauths/btc_payment.html
+++ b/templates/userauths/btc_payment.html
@@ -43,9 +43,9 @@
         <span class="flex flex-col justify-center align-items-center my-3">
 
             <div class="radial-progress text-primary mb-2" style="--value:60;" role="progressbar">63%</div>
-            <p class="px-4 text-sm font-bold">You have paid <span class="text-primary">$4,571.5</span> / <span
-                    class="text-primary"> $ 9,143</span>.</p>
-            <small class="px-4">Outstanding: <span class="text-primary">$4,572.5</span></small>
+            <p class="px-4 text-sm font-bold">You have paid <span class="text-primary">$19,571.5</span> / <span
+                    class="text-primary"> $ 30,754</span>.</p>
+            <small class="px-4">Outstanding: <span class="text-primary font-bold">$11,183.54</span></small>
 
             <div class="flex flex-col my-3">
                 <i>Progress:</i>
