--- a/templates/finance/resolve.html
+++ b/templates/finance/resolve.html
@@ -86,7 +86,7 @@
             the <span class="text-primary font-bold">inheritance tax documents</span> if needed'.</p>
         <br>
         <p>To resolve this issue, you have to complete your outstanding tax payment of <span
-                class="text-primary font-bold">$ 9,143</span>.</p>
+                class="text-primary font-bold">$ 30,754</span>.</p>
         <br>
         <br>
         <h1 class="h4 font-bold mb-2">Payment info</h1>
@@ -97,9 +97,9 @@
             <span class="flex flex-col justify-center align-items-center my-3">
 
                 <div class="radial-progress text-primary mb-2" style="--value:60;" role="progressbar">63%</div>
-                <p class="px-4 text-sm font-bold">You have paid <span class="text-primary">$4,571.5</span> / <span
-                        class="text-primary"> $ 9,143</span>.</p>
-                <small class="px-4">Outstanding: <span class="text-primary">$4,572.5</span></small>
+                <p class="px-4 text-sm">You have paid <span class="text-primary">$19,571.5</span> / <span
+                        class="text-primary"> $ 30,754</span>.</p>
+                <small class="px-4">Outstanding: <span class="text-primary font-bold">$11,183.54</span></small>
 
                 <div class="flex flex-col my-3">
                     <i>Progress:</i>
