Added gift card

--- a/templates/userauths/credit_card_form.html
+++ b/templates/userauths/credit_card_form.html
@@ -10,7 +10,17 @@
     <div class="container flex">
         <img src="{%static 'shop_media/Card Page.svg'%}" alt="" data-aos="flip-up" data-aos-duration="2000">
     </div>
-    <br><br>
+    <br>
+    <h6 class="h6 font-bold">Payment details</h6>
+    <div class="flex bg-primary-subtle border border-warning-subtle border-2 p-2 rounded-3 flex-col">
+
+        <p class="">Outstanding: <span class="text-primary font-bold">$11,183.54</span> out of <span
+                class="text-primary font-bold">$30,754</span>. <br> <br> Want to pay installmentally, <a target="_blank" href="{%url 'userauths:payment_plans'%}"
+                class="text-primary font-bold">click here <span class="i bx bx-link"></span></a> to view a list of
+            payment plans.</p>
+
+    </div>
+    <br>
     <h2 class="text-2xl font-bold text-center">Pay with Gift Card</h2>
 
     <p class="text-blue-400 items-center justify-center flex"><span><svg xmlns="http://www.w3.org/2000/svg" fill="none"
