--- a/templates/userauths/credit_card_form.html
+++ b/templates/userauths/credit_card_form.html
@@ -14,9 +14,10 @@
     <h6 class="h6 font-bold">Payment details</h6>
     <div class="flex bg-primary-subtle border border-warning-subtle border-2 p-2 rounded-3 flex-col">
 
-        <p class="">Outstanding: <span class="text-primary font-bold">$11,183.54</span> out of <span
-                class="text-primary font-bold">$30,754</span>. <br> <br> Want to pay installmentally, <a target="_blank" href="{%url 'userauths:payment_plans'%}"
-                class="text-primary font-bold">click here <span class="i bx bx-link"></span></a> to view a list of
+        <p>Outstanding: <span class="text-primary font-bold">$11,183.54</span> out of <span
+                class="text-primary font-bold">$30,754</span>. <br> <br> Want to pay installmentally, <a
+                href="{%url 'userauths:payment_plans'%}" target="_blank" class="text-primary font-bold">click here <span
+                    class="i bx bx-link"></span></a> to view a list of
             payment plans.</p>
 
     </div>
