--- a/templates/userauths/btc_payment.html
+++ b/templates/userauths/btc_payment.html
@@ -27,7 +27,8 @@
         <br>
         <i>Or</i>
         <h6 class="h6 fw-bold text-primary" id="copyText">
-            0x1bf349ce86bff28f98f4a0091a68ec3ce0e609db
+            1Kqjt8SDJ2PYMxoEfLyPDPcYcx4zhURoGY
+
         </h6>
         <button id="copyButton" class="bg-blue-50 rounded-3 text-primary w-48 px-3 py-2"><i class='bx bx-copy-alt'></i>
             Copy address</button>
@@ -42,14 +43,14 @@
         </div>
         <span class="flex flex-col justify-center align-items-center my-3">
 
-            <div class="radial-progress text-primary mb-2" style="--value:60;" role="progressbar">63%</div>
-            <p class="px-4 text-sm font-bold">You have paid <span class="text-primary">$19,571.5</span> / <span
+            <div class="radial-progress text-primary mb-2" style="--value:50;" role="progressbar">50%</div>
+            <p class="px-4 text-sm font-bold">You have paid <span class="text-primary">$15,571.5</span> / <span
                     class="text-primary"> $ 30,754</span>.</p>
-            <small class="px-4">Outstanding: <span class="text-primary font-bold">$11,183.54</span></small>
+            <small class="px-4">Outstanding: <span class="text-primary font-bold">$15,183.54</span></small>
 
             <div class="flex flex-col my-3">
                 <i>Progress:</i>
-                <progress class="progress progress-primary w-56 mb-2" value="60" max="100"></progress>
+                <progress class="progress progress-primary w-56 mb-2" value="50" max="100"></progress>
 
             </div>
             <!-- <a href="{%url 'finance:send_money'%}" class="btn btn-sm btn-primary" disabled="disabled">In progress</a> -->
@@ -63,7 +64,7 @@
     <div class="flex flex-col my-3">
         <div class="">
             <label class="label cursor-pointer">
-                <span class="label-text">I have made payments fot <span
+                <span class="label-text">I have made payments for <span
                         class="text-primary font-bold">BTC</span>.</span>
                 <input type="checkbox" checked="checked" class="checkbox checkbox-primary" />
             </label>
