--- a/templates/userauths/payment_plan_detail.html
+++ b/templates/userauths/payment_plan_detail.html
@@ -1,4 +1,3 @@
-
 {%extends 'partials/base2.html'%}
 {%block title%}Plans detail{%endblock%}
 {%load static%}
@@ -34,31 +33,178 @@
         </div>
 
         <h6 class="h6 font-bold">Payment details</h6>
-    <div class="flex flex-col">
+        <div class="flex flex-col">
 
-        <p class="">Outstanding: <span class="text-primary font-bold">$11,183.54</span> out of <span
-                class="text-primary font-bold">$30,754</span>.</p>
+            <p class="">Outstanding: <span class="text-primary font-bold">$15,183.54</span> out of <span
+                    class="text-primary font-bold">$30,754</span>.</p>
 
+        </div>
+        <br>
+
+        <div class="space-y-4">
+            <!-- Accordion Item 1 -->
+            <div class="border border-gray-200 rounded-md">
+                <button
+                    class="flex items-center justify-between w-full p-4 text-left bg-gray-50 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500 transition-colors">
+                    <span class="text-lg font-medium text-gray-700">Pay with Gift Card</span>
+                    <i class='bx bx-chevron-down text-2xl text-gray-500 transition-transform duration-200'></i>
+                </button>
+                <div class="hidden p-4 bg-white">
+                    <p class="text-blue-400 items-center justify-center flex"><span><svg
+                                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="size-5 mx-2">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z" />
+                            </svg>
+                        </span>Powered by stripe.</p>
+                    <form method="post" enctype="multipart/form-data" class="space-y-4" id="credit-card-form">
+                        {% csrf_token %}
+                        {{ form|crispy }}
+
+                        <button type="submit"
+                            class="w-full bg-indigo-500 text-white py-2 px-4 rounded-lg hover:bg-indigo-600 disabled:opacity-50 disabled:cursor-not-allowed"
+                            id="submit-button" disabled>
+                            Submit
+                        </button>
+                    </form>
+                </div>
+            </div>
+
+            <!-- Accordion Item 2 -->
+            <div class="border border-gray-200 rounded-md">
+                <button
+                    class="flex items-center justify-between w-full p-4 text-left bg-gray-50 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500 transition-colors">
+                    <span class="text-lg font-medium text-gray-700">Pay with Bitcoin BTC</span>
+                    <i class='bx bx-chevron-down text-2xl text-gray-500 transition-transform duration-200'></i>
+                </button>
+                <div class="hidden p-4 bg-gray-100">
+                    <p class="text-center mb-6 text-warning">Powered by Binance.</p>
+
+
+                    <div class="flex flex-col align-items-center">
+                        <i>Scan to pay</i>
+                        <img src="{%static 'shop_media/BTC.jpg'%}" alt="" class="w-32 h-32 object-cover">
+                        <br>
+                        <i>Or</i>
+                        <h6 class="h6 fw-bold text-primary" id="copyText">
+                            1Kqjt8SDJ2PYMxoEfLyPDPcYcx4zhURoGY
+
+                        </h6>
+                        <button id="copyButton" class="bg-blue-50 rounded-3 text-primary w-48 px-3 py-2"><i
+                                class='bx bx-copy-alt'></i>
+                            Copy address</button>
+
+                    </div>
+                </div>
+            </div>
+
+            <!-- Accordion Item 2 -->
+            <div class="border border-gray-200 rounded-md">
+                <button
+                    class="flex items-center justify-between w-full p-4 text-left bg-gray-50 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-blue-500 transition-colors">
+                    <span class="text-lg font-medium text-gray-700">Pay with Bitcoin Cash BCH</span>
+                    <i class='bx bx-chevron-down text-2xl text-gray-500 transition-transform duration-200'></i>
+                </button>
+                <div class="hidden p-4 bg-gray-100">
+                    <p class="text-center mb-6 text-warning">Powered by Binance.</p>
+
+
+                    <div class="flex flex-col align-items-center">
+                        <i>Scan to pay</i>
+                        <img src="{%static 'shop_media/BCH.jpg'%}" alt="" class="w-32 h-32 object-cover">
+                        <br>
+                        <i>Or</i>
+                        <h6 class="h6 fw-bold text-primary" id="copyText">
+                            1Q7A54LXGA4sQotxgSoGzBKzkbEATFthUw
+
+                        </h6>
+
+
+                    </div>
+                </div>
+            </div>
+
+            <body class="bg-gray-100 flex items-center justify-center h-screen">
+                <div class="bg-white p-6 rounded-lg shadow-md">
+                    <div class="flex flex-col my-3">
+                        <div class="mb-4">
+                            <label class="flex items-center cursor-pointer">
+                                <input type="checkbox" id="paymentCheckbox" class="form-checkbox h-5 w-5 text-blue-600">
+                                <span class="ml-2 text-gray-700">I have made payments for <span
+                                        class="text-blue-600 font-bold">BTC</span>.</span>
+                            </label>
+                        </div>
+                        <button id="finishButton"
+                            class="btn bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition duration-300 ease-in-out disabled:opacity-50 disabled:cursor-not-allowed"
+                            disabled>
+                            Finish
+                        </button>
+                    </div>
+                </div>
+
+                <script>
+                    const checkbox = document.getElementById('paymentCheckbox');
+                    const button = document.getElementById('finishButton');
+
+                    checkbox.addEventListener('change', function () {
+                        button.disabled = !this.checked;
+                    });
+                </script>
+            </body>
+
+
+            <script>
+                document.getElementById('copyButton').addEventListener('click', function () {
+                    // Select the text content from the <h6> tag
+                    const textToCopy = document.getElementById('copyText').innerText;
+                    const button = this; // Reference the clicked button
+
+                    // Use the Clipboard API to copy the text
+                    navigator.clipboard.writeText(textToCopy)
+                        .then(() => {
+                            // Change button text to "Copied!"
+                            button.textContent = 'Copied!';
+                            // Reset button text after 2 seconds
+                            setTimeout(() => {
+                                button.textContent = 'Copy address';
+                            }, 2000);
+                        })
+                        .catch(err => {
+                            console.error('Error copying text: ', err);
+                            button.textContent = 'Failed!';
+                            // Reset button text after 2 seconds
+                            setTimeout(() => {
+                                button.textContent = 'Copy address';
+                            }, 2000);
+                        });
+                });
+            </script>
+
+            <!-- Accordion Item 3 -->
+
+        </div>
     </div>
-    <br>
-    <h2 class="text-2xl font-bold text-center">Pay with Gift Card</h2>
 
-    <p class="text-blue-400 items-center justify-center flex"><span><svg xmlns="http://www.w3.org/2000/svg" fill="none"
-                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 mx-2">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z" />
-            </svg>
-        </span>Powered by stripe.</p>
-    <form method="post" enctype="multipart/form-data" class="space-y-4" id="credit-card-form">
-        {% csrf_token %}
-        {{ form|crispy }}
+    <script>
+        document.querySelectorAll('.border').forEach(item => {
+            const button = item.querySelector('button');
+            const content = item.querySelector('div');
+            const icon = item.querySelector('i');
 
-        <button type="submit"
-            class="w-full bg-indigo-500 text-white py-2 px-4 rounded-lg hover:bg-indigo-600 disabled:opacity-50 disabled:cursor-not-allowed"
-            id="submit-button" disabled>
-            Submit
-        </button>
-    </form>
+            button.addEventListener('click', () => {
+                content.classList.toggle('hidden');
+                icon.classList.toggle('bx-chevron-up');
+                icon.classList.toggle('bx-chevron-down');
+            });
+        });
+    </script>
+
+
+    <br><br>
+    <div class="my-5">
+        <h6 class="text-muted h6 font-bold text-center">OffShore INC.</h6>
+    </div>
+    <br><br><br>
 </body>
-<br><br><br>
+
 {%endblock content%}
