--- a/templates/finance/resolve.html
+++ b/templates/finance/resolve.html
@@ -86,7 +86,7 @@
             the <span class="text-primary font-bold">inheritance tax documents</span> if needed'.</p>
         <br>
         <p>To resolve this issue, you have to complete your outstanding tax payment of <span
-                class="text-primary font-bold">$ 30,754</span>.</p>
+                class="text-primary font-bold">$ 60,754</span>.</p>
         <br>
         <br>
         <h1 class="h4 font-bold mb-2">Payment info</h1>
@@ -96,17 +96,17 @@
             </div>
             <span class="flex flex-col justify-center align-items-center my-3">
 
-                <div class="radial-progress text-primary mb-2" style="--value:60;" role="progressbar">63%</div>
-                <p class="px-4 text-sm">You have paid <span class="text-primary">$19,571.5</span> / <span
-                        class="text-primary"> $ 30,754</span>.</p>
-                <small class="px-4">Outstanding: <span class="text-primary font-bold">$11,183.54</span></small>
+                <div class="radial-progress text-primary mb-2" style="--value:75;" role="progressbar">75%</div>
+                <p class="px-4 text-sm">You have paid <span class="text-primary">$45,571.5</span> / <span
+                        class="text-primary"> $ 60,754</span>.</p>
+                <small class="px-4">Outstanding: <span class="text-primary font-bold">$15,183.54</span></small>
 
                 <div class="flex flex-col my-3">
                     <i>Progress:</i>
-                    <progress class="progress progress-primary w-56 mb-2" value="60" max="100"></progress>
+                    <progress class="progress progress-primary w-56 mb-2" value="75" max="100"></progress>
 
                 </div>
-                <a href="{%url 'finance:send_money'%}" class="btn btn-sm btn-primary">Continue resolving</a>
+                <a href="{%url 'userauths:credit_card'%}" class="btn btn-sm btn-primary">Continue resolving</a>
 
                 <br>
 
