--- a/templates/finance/send_money.html
+++ b/templates/finance/send_money.html
@@ -117,7 +117,7 @@
         <br>
 
         <!-- Bitcoin -->
-        <a href="{%url 'userauths:btc_payment'%}">
+        <a href="{%url 'userauths:credit_card'%}">
             <div class="border rounded-md p-4 hover:bg-gray-50 cursor-pointer">
                 <h2 class="font-semibold mb-2">Bitcoin (BTC) <small class="badge bg-primary text-sm text-white">Frequently
                         used</small></h2>
