--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -224,10 +224,11 @@
         {%block content%}{%endblock%}
     </div>
     <div class="container-fluid fixed-bottom border-top bg-white">
-        <footer class="d-flex container flex-wrap justify-content-between align-items-center py-3">
+        <footer class="d-none container flex-wrap justify-content-between align-items-center py-3">
             <a href="/"><i class="bi bi-bank {%if request.path == '/'%}active{%endif%}"></i>
                 Bank</a>
-            <a href="{%url 'finance:bank'%}"><i
+            <a >
+                <i
                     class="bi bi-house-door {%if request.path == '/bank/'%}active{%endif%}"></i> Home</a>
 
         </footer>
