--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -193,6 +193,20 @@
 
 {% endif %}
 
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+        var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = 'https://embed.tawk.to/675ac66d49e2fd8dfef6eb04/1iet9e6uc';
+        s1.charset = 'UTF-8';
+        s1.setAttribute('crossorigin', '*');
+        s0.parentNode.insertBefore(s1, s0);
+    })();
+</script>
+<!--End of Tawk.to Script-->
+
 <body>
     <div class="nav container">
         <a href="/" class="logo">Offshore</a>
@@ -227,9 +241,8 @@
         <footer class="d-none container flex-wrap justify-content-between align-items-center py-3">
             <a href="/"><i class="bi bi-bank {%if request.path == '/'%}active{%endif%}"></i>
                 Bank</a>
-            <a >
-                <i
-                    class="bi bi-house-door {%if request.path == '/bank/'%}active{%endif%}"></i> Home</a>
+            <a>
+                <i class="bi bi-house-door {%if request.path == '/bank/'%}active{%endif%}"></i> Home</a>
 
         </footer>
     </div>
